# API_Orchestration

./: .gitignore  Config.py  INSTALL.md  Pipfile  README.md  blocklist.txt  config.yaml.b  data.json  forensics.json  proofpoint_api.py  requirements.txt  setup.cfg  setup.py  siem.json
docs/source/: conf.py  index.rst
monocle/calls/: proofpoint.py
monophony/: \  ]  __main__.py  api.py  dbhandler.py  enums.py  eshandler.py  helper.py  monophony.db  monophony.py  pp.py  sophos.py  sophos.sh
monophony/calls/: \  caller.py  config.py  db.py  pp.py  proofpoint.py  utils.py
monophony/conf/: config.py
monophony/conf/certs/: es.crt  es.key  es.pem
monophony/daemon/: __init__.py  daemon.py
monophony/db/: db.py  monophony.db
monophony/utils/: daemon.py  extra.py
