[metadata]
name = Monophony
author = Thomas Gordon
author-email = gordon@xnorkl.dev
licence = MIT
long_description = file: Index.rst
url = https://github.com/xnorkl/SOC_Project
requires-python = >= 3.8.3
classifiers =
  Development Status :: 1 - Beta
  Environment :: Console
  Intended Audience :: Information Security Engineers
  Intended Audience :: Information Security Analysts
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python

[mypy]
files=monophony,test
ignore_missing_imports=true
[isort]
multi_line_output=3
inlcude_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[options.entry_points]
daemon =
  proofpoint-blocklist = monophony.calls.proopoint:blocklist
